# p1c0

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml  startup.S
.cargo/: config.toml
.github/workflows/: main.yml  setup.sh
arm_semihosting/: Cargo.toml
arm_semihosting/src/: io.rs  lib.rs  serial.rs
arm_semihosting/src/arch/: aarch64.rs  arm.rs  x86.rs
drivers/: Cargo.toml
drivers/.cargo/: config.toml
drivers/driver-build/: Cargo.toml
drivers/driver-build/src/: driver.ld  lib.rs
drivers/driver-helper/: Cargo.toml
drivers/driver-helper/src/: lib.rs  syscall.rs
drivers/stdlib/: Cargo.toml
drivers/virtio/: Cargo.toml  build.rs
drivers/virtio/src/: main.rs
fw/: Cargo.toml  build.rs  p1c0.ld  p1c0_bin.ld  startup.S
fw/.cargo/: config.toml
fw/src/: lib.rs  main.rs  userspace_proc.rs
fw/tests/: adt_tests.rs  aic_tests.rs  backtracer_tests.rs  initcall_tests.rs  process_tests.rs  sync_tests.rs  syscall_tests.rs  thread_tests.rs  unknown_syscall_tests.rs
m1/: Cargo.toml  FiraCode30.raw  FiraCode40.raw
m1/src/: adt.rs  arch.rs  boot_args.rs  collections.rs  display.rs  generic_timer.rs  init.rs  lib.rs  macros.rs  registers.rs  spi.rs  uart.rs
m1/src/arch/: alloc.rs  exceptions.rs  exceptions.s  mmu.rs
m1/src/drivers/: mod.rs  spi.rs
p1c0_kernel/: Cargo.toml
p1c0_kernel/src/: adt.rs  arch.rs  backtrace.rs  boot_args.rs  chickens.rs  collections.rs  crc.rs  elf.rs  error.rs  filesystem.rs  font.rs  hash.rs  init.rs  lib.rs  log.rs  macros.rs  memory.rs  prelude.rs  print.rs  process.rs  registers.rs  syscall.rs  thread.rs
p1c0_kernel/src/arch/: cache.rs  exceptions.rs  exceptions.s  mmu.rs
p1c0_kernel/src/arch/mmu/: early_alloc.rs
p1c0_kernel/src/collections/: flat_map.rs  instrusive_list.rs  intrusive_list.rs  ring_buffer.rs
p1c0_kernel/src/drivers/: aic.rs  display.rs  generic_timer.rs  gpio.rs  hid.rs  mod.rs  spi.rs  uart.rs  virtio.rs  wdt.rs
p1c0_kernel/src/drivers/hid/: keyboard.rs
p1c0_kernel/src/drivers/interfaces/: interrupt_controller.rs  logger.rs  mod.rs  timer.rs  watchdog.rs
p1c0_kernel/src/drivers/virtio/: input.rs  virtqueue.rs
p1c0_kernel/src/filesystem/: cpio.rs  initfs.rs
p1c0_kernel/src/memory/: address.rs  address_space.rs  kalloc.rs  map.rs  mod.rs  physical_page_allocator.rs
p1c0_kernel/src/sync/: spinlock.rs
p1c0_macros/: Cargo.toml
p1c0_macros/src/: lib.rs
src/: display.rs  main.rs
stripper/: Cargo.toml
stripper/src/: lib.rs  main.rs
test_fwk/: Cargo.toml
test_fwk/src/: lib.rs
userspace/: CMakeLists.txt
userspace/basic_test/: CMakeLists.txt
userspace/basic_test/include/: syscalls.h
userspace/basic_test/src/: main.cpp  syscalls.cpp
userspace/bins/: CMakeLists.txt
userspace/bins/basic_test/: CMakeLists.txt
userspace/bins/basic_test/src/: main.cpp
userspace/bins/crash/: CMakeLists.txt
userspace/bins/crash/src/: main.cpp
userspace/bins/false/: CMakeLists.txt
userspace/bins/true/: CMakeLists.txt
userspace/libs/: CMakeLists.txt
userspace/libs/crt/: CMakeLists.txt  ldscript.ld  p1c0.ld
userspace/libs/crt/include/crt/: relocations.h
userspace/libs/crt/src/crt/: crt.cpp  relocations.cpp  start.cpp
userspace/libs/libcxx/: CMakeLists.txt
userspace/libs/libcxx/include/libcxx/: array.h  compare.h  fmt.h  iterator.h  span.h  stdarg.h  string.h  string_view.h  syscalls.h  type_traits.h  types.h
userspace/libs/libcxx/src/libcxx/: fmt.cpp  syscalls.cpp
userspace/toolchain/: aarch64.cmake
userspace_test/: CMakeLists.txt  makefile  p1c0.ld
userspace_test/include/: relocations.h  types.h
userspace_test/src/: main.cpp  relocations.cpp  syscalls.cpp
xtask/: Cargo.toml
xtask/src/: drivers.rs  main.rs  userspace.rs
