[package]
name = "p1c0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "p1c0-fw"
path = "src/main.rs"
test = false

[[test]]
name = "adt_tests"
path = "tests/adt_tests.rs"

[features]
emulator = ["arm-semihosting"]
default = []

[dependencies]
p1c0-kernel = { path = "../p1c0_kernel" }
embedded-graphics = "0.7.1"
tinybmp = "0.3.1"
cortex-a = { git = "https://github.com/Javier-varez/cortex-a.git", branch = "master" }
tock-registers = "0.7.0"
arm-semihosting = { version = "0.1.0", optional = true }
test-fwk = { path = "../test_fwk", optional = true }

# These dependencies are needed for testing
[dev-dependencies]
arm-semihosting = "0.1.0"
test-fwk = { path = "../test_fwk" }

[build-dependencies]
cc = "1.0"

# Enable the following to show output during test runs
# [m1_runner]
# show_stdio = true
# show_display = true
