[package]
name = "p1c0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "p1c0"
path = "src/lib.rs"

[[bin]]
name = "p1c0-fw"
path = "src/main.rs"
test = false

[[test]]
name = "adt_tests"
path = "tests/adt_tests.rs"

[[test]]
name = "thread_tests"
path = "tests/thread_tests.rs"

[[test]]
name = "aic_tests"
path = "tests/aic_tests.rs"

[[test]]
name = "syscall_tests"
path = "tests/syscall_tests.rs"

[[test]]
name = "unknown_syscall_tests"
path = "tests/unknown_syscall_tests.rs"

[[test]]
name = "initcall_tests"
path = "tests/initcall_tests.rs"

[[test]]
name = "process_tests"
path = "tests/process_tests.rs"

[[test]]
name = "sync_tests"
path = "tests/sync_tests.rs"

[[test]]
name = "backtracer_tests"
path = "tests/backtracer_tests.rs"

[features]
emulator = ["arm-semihosting"]
# The binary feature builds a bin file instead of a macho file and uses a different ld script
binary = []
coverage = ["minicov", "test-fwk/coverage"]
default = []

[dependencies]
p1c0-kernel = { path = "../p1c0_kernel" }
p1c0-macros = { path = "../p1c0_macros" }
embedded-graphics = "0.7.1"
tinybmp = "0.3.1"
cortex-a = "7.2.0"
tock-registers = "0.7.0"
arm-semihosting = { git = "https://github.com/javier-varez/arm_semihosting", optional = true }
test-fwk = { path = "../test_fwk", optional = true }
minicov = { version = "0.2.4", optional = true }

# These dependencies are needed for testing
[dev-dependencies]
arm-semihosting = { git = "https://github.com/javier-varez/arm_semihosting" }
test-fwk = { path = "../test_fwk" }

[build-dependencies]
cc = "1.0"

# Enable the following to show output during test runs
# [m1_runner]
# show_stdio = true
# show_display = true

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
