[package]
name = "m1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
embedded-graphics = "0.7.1"
cortex-a = { git = "https://github.com/Javier-varez/cortex-a.git", branch = "fix_core_arch_asm", version = "6.1.0" }
tock-registers = "0.7.0"
