[package]
name = "p1c0-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
semihosting = []
default = []

[dependencies]
embedded-graphics = "0.7.1"
cortex-a = { git = "https://github.com/Javier-varez/cortex-a.git", branch = "master" }
tock-registers = "0.7.0"
heapless = "0.7.9"