[package]
name = "p1c0-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
semihosting = []
default = []

[dependencies]
embedded-graphics = "0.7.1"
aarch64-cpu = "9.0.0"
tock-registers = "0.8.1"
heapless = "0.7.9"
p1c0-macros = { path = "../p1c0_macros" }
