[package]
name = "p1c0-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "p1c0_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "1.0.89", features = ["full"] }
quote = "1.0.15"
