[package]
name = "test-fwk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "m1_runner"
required-features = ["m1_runner"]

[features]
default = []
m1_runner = ["xshell", "structopt", "toml", "anyhow", "object", "stripper", "ctrlc"]
coverage = ["minicov"]

[dependencies]
arm-semihosting = { git = "https://github.com/javier-varez/arm_semihosting" }
ansi_rgb = "0.2.0"
minicov = { version = "0.2.4", optional = true }
xshell = { version = "0.1.17", optional = true }
structopt = { version = "0.3.25", optional = true }
toml = { version = "0.5.8", optional = true }
anyhow = { version = "1.0.53", optional = true }
object = { version = "0.28", optional = true }
stripper = { path = "../stripper", optional = true }
ctrlc = { version = "3.2.1", optional = true }
